--- a/templates/data_entry.html
+++ b/templates/data_entry.html
@@ -786,8 +786,14 @@
                         </select>
                     </div>
                     <div class="input-group">
-                        <label for="line_id">LINE : ID</label>
-                        <input type="text" id="line_id" name="line_id" placeholder="กรอก LINE ID">
+                        <label for="assigned_company">บริษัทที่รับงาน</label>
+                        <select id="assigned_company" name="assigned_company">
+                            <option value="">--- เลือกบริษัท ---</option>
+                            <option value="STARLOAN">STARLOAN</option>
+                            <option value="GLORYCASH">GLORYCASH</option>
+                            <option value="CASHCREDIT">CASHCREDIT</option>
+                            <option value="อื่นๆ">อื่นๆ</option>
+                        </select>
                     </div>
                     <div class="input-group">
                         <label for="upfront_interest">หักดอกหัวท้าย</label>
