--- a/templates/data_entry.html
+++ b/templates/data_entry.html
@@ -751,7 +751,7 @@
                     </div>
                     <div class="input-group">
                         <label for="status">สถานะ</label>
-                        <input type="text" id="status" name="status" value="รอดำเนินการ" readonly>
+                        <input type="text" id="status" name="status" value="รอติดต่อ" readonly>
                     </div>
                     <div class="input-group">
                         <label for="desired_credit_limit">วงเงินที่ต้องการ</label>
